- Refactored List to pass selected to ListItem props - Fixed unique react key issue that was breaking sorting

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-scripts": "1.0.17",
-    "reactstrap": "^5.0.0-alpha.3"
+    "reactstrap": "^5.0.0-alpha.3",
+    "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
